@@ -40,13 +40,13 @@ repositories {
     }
 }
 
-version = "3.1.0"
+version = "3.3.0"
 sourceCompatibility = "21"
 
 ext {
-    vertxVersion = "4.5.2"
-    junitJupiterEngineVersion = "5.9.3"
-    jooqVersion = "3.18.4"
+    vertxVersion = "4.5.9"
+    junitJupiterEngineVersion = "5.10.2"
+    jooqVersion = "3.19.3"
     protoVersion = "3.23.3"
     grpcVersion = "1.61.0"
 }
@@ -71,37 +71,40 @@ sourceSets {
     }
 }
 
-
 dependencies {
     implementation(platform("io.vertx:vertx-stack-depchain:$vertxVersion"))
     implementation group:"io.vertx", name:"vertx-core", version:"$vertxVersion"
     implementation "io.vertx:vertx-web:$vertxVersion"
-    implementation group: "io.agroal", name: "agroal-pool", version: "2.1"
+    implementation group: "io.agroal", name: "agroal-pool", version: "2.5"
     implementation "io.vertx:vertx-pg-client:$vertxVersion"
     implementation "io.vertx:vertx-mysql-client:$vertxVersion"
     implementation "io.vertx:vertx-jdbc-client:$vertxVersion"
     implementation "io.vertx:vertx-db2-client:$vertxVersion"
     implementation "io.vertx:vertx-rx-java3:$vertxVersion"
 
-    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.44.1.0'
-    implementation group: 'cubrid', name: 'cubrid-jdbc', version: '11.0.11.0365'
-    implementation "com.google.firebase:firebase-admin:9.1.1"
-    implementation group: "org.neo4j.driver", name: "neo4j-java-driver", version: "4.4.9"
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.46.0.0'
+    implementation group: 'cubrid', name: 'cubrid-jdbc', version: '11.2.1.0038'
+    implementation "com.google.firebase:firebase-admin:9.3.0"
+    implementation group: "org.neo4j.driver", name: "neo4j-java-driver", version: "4.4.18"
     implementation "io.vertx:vertx-mongo-client:$vertxVersion"
-    implementation "io.smallrye.reactive:smallrye-mutiny-vertx-core:2.24.1"
+    implementation "io.smallrye.reactive:smallrye-mutiny-vertx-core:2.30.1"
     implementation group: 'javax.ws.rs', name: 'jsr311-api', version: '1.1.1'
 
     implementation "org.jooq:jooq"
     implementation "io.vertx:vertx-tcp-eventbus-bridge:$vertxVersion"
     implementation "io.vertx:vertx-kafka-client:$vertxVersion"
 
-    implementation "com.google.guava:guava:30.0-jre"
+    implementation "com.google.guava:guava:33.2.1-jre"
     implementation project(":handicap")
     implementation "dmo.fs.utils:generate"
     // implementation "io.vertx:vertx-openapi:$vertxVersion"
 
     implementation "io.vertx:vertx-web-openapi-router:$vertxVersion"
     implementation "io.vertx:vertx-web-api-contract:$vertxVersion"
+
+    implementation "io.vertx:vertx-mqtt:$vertxVersion"
+
+//    compileOnly "io.vertx:vertx-web-graphql:$vertxVersion"
 
     // implementation "io.vertx:vertx-web-validation"
     // implementation "io.vertx:vertx-web-openapi"
@@ -135,6 +138,11 @@ apply plugin: "nu.studer.jooq"
 
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs << "-Xlint:deprecation"
+    // exec "gradlew clean run -Pcompiler.prop=-Xlint:unchecked" to display compiler messages
+    if(project.hasProperty("compiler.prop")) {
+	options.compilerArgs << project.property("compiler.prop")
+    }
+//    options.compilerArgs.add("--enable-preview")
 //    dependsOn processResources
 }
 
@@ -163,7 +171,11 @@ run {
     if (System.getenv("GOOGLE_APPLICATION_CREDENTIALS") == null) {
       environment "GOOGLE_APPLICATION_CREDENTIALS", "$usr/auth/service-account-key.json"
     }
-
+    if(System.getProperty("GRPC_SERVER") == "true") {
+        environment "GRPC_SERVER", "true"
+    } else if(System.getProperty("GRPC_SERVER") == "false") {
+        environment "GRPC_SERVER", "false"
+    }
     args = ['run', mainVerticleName,  debug, "--redeploy=$watchForChange", "--launcher-class=$mainClassName",
     "--on-redeploy=$doOnChange", "--conf=src/main/resources/application-conf.json",
      cache]
@@ -215,6 +227,7 @@ jar {
 }
 
 shadowJar {
+  zip64 = true
   archiveClassifier = "prod"
   mergeServiceFiles {
     include "META-INF/services/io.vertx.core.spi.VerticleFactory"
